--- a/Book-Tracker/src/main/resources/templates/website/index.html
+++ b/Book-Tracker/src/main/resources/templates/website/index.html
@@ -1,30 +1,5 @@
-<!--<!DOCTYPE html>-->
-<!--<html xmlns:th="http://www.thymeleaf.org">-->
-<!--<head>-->
-<!--    <title>Book Tracker</title>-->
-<!--</head>-->
-<!--<body>-->
-<!--<h1>Book Tracker</h1>-->
-<!--<form th:action="@{/add}" method="post">-->
-<!--    <input type="text" name="title" placeholder="Title" required />-->
-<!--    <input type="text" name="author" placeholder="Author" required />-->
-<!--    <input type="text" name="genre" placeholder="Genre" />-->
-<!--    <button type="submit">Add Book</button>-->
-<!--</form>-->
-<!--<h2>Books:</h2>-->
-<!--<ul>-->
-<!--    <li th:each="book : ${books}">-->
-<!--        <span th:text="${book.title}"></span> by-->
-<!--        <span th:text="${book.author}"></span> - -->
-<!--        <span th:text="${book.genre}"></span>-->
-<!--        <a th:href="@{/delete(id=${book.id})}">Delete</a>-->
-<!--    </li>-->
-<!--</ul>-->
-<!--</body>-->
-<!--</html>-->
-
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" xmlns:th="http://www.thymeleaf.org">
 
 <head>
     <title>BookSaw - Free Book Store HTML CSS Template</title>
@@ -1086,159 +1061,9 @@
     </div>
 </section>
 
-<footer id="footer">
-    <div class="container">
-        <div class="row">
-
-            <div class="col-md-4">
-
-                <div class="footer-item">
-                    <div class="company-brand">
-                        <img src="images/main-logo.png" alt="logo" class="footer-logo">
-                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Sagittis sed ptibus liberolectus
-                            nonet psryroin. Amet sed lorem posuere sit iaculis amet, ac urna. Adipiscing fames
-                            semper erat ac in suspendisse iaculis.</p>
-                    </div>
-                </div>
-
-            </div>
-
-            <div class="col-md-2">
-
-                <div class="footer-menu">
-                    <h5>About Us</h5>
-                    <ul class="menu-list">
-                        <li class="menu-item">
-                            <a href="#">vision</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">articles </a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">careers</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">service terms</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">donate</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-            <div class="col-md-2">
-
-                <div class="footer-menu">
-                    <h5>Discover</h5>
-                    <ul class="menu-list">
-                        <li class="menu-item">
-                            <a href="#">Home</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Books</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Authors</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Subjects</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Advanced Search</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-            <div class="col-md-2">
-
-                <div class="footer-menu">
-                    <h5>My account</h5>
-                    <ul class="menu-list">
-                        <li class="menu-item">
-                            <a href="#">Sign In</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">View Cart</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">My Wishtlist</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Track My Order</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-            <div class="col-md-2">
-
-                <div class="footer-menu">
-                    <h5>Help</h5>
-                    <ul class="menu-list">
-                        <li class="menu-item">
-                            <a href="#">Help center</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Report a problem</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Suggesting edits</a>
-                        </li>
-                        <li class="menu-item">
-                            <a href="#">Contact us</a>
-                        </li>
-                    </ul>
-                </div>
-
-            </div>
-
-        </div>
-        <!-- / row -->
-
-    </div>
+<footer class="footer">
+    <div th:insert="~{admin/footer_website :: footer_website}"></div>
 </footer>
-
-<div id="footer-bottom">
-    <div class="container">
-        <div class="row">
-            <div class="col-md-12">
-
-                <div class="copyright">
-                    <div class="row">
-
-                        <div class="col-md-6">
-                            <p>© 2022 All rights reserved. Free HTML Template by <a
-                                    href="https://www.templatesjungle.com/" target="_blank">TemplatesJungle</a></p>
-                        </div>
-
-                        <div class="col-md-6">
-                            <div class="social-links align-right">
-                                <ul>
-                                    <li>
-                                        <a href="#"><i class="icon icon-facebook"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icon icon-twitter"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icon icon-youtube-play"></i></a>
-                                    </li>
-                                    <li>
-                                        <a href="#"><i class="icon icon-behance-square"></i></a>
-                                    </li>
-                                </ul>
-                            </div>
-                        </div>
-
-                    </div>
-                </div><!--grid-->
-
-            </div><!--footer-bottom-content-->
-        </div>
-    </div>
-</div>
 
 <script src="js/jquery-1.11.0.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
