commit admin design

--- a/Book-Tracker/src/main/resources/templates/website/index.html
+++ b/Book-Tracker/src/main/resources/templates/website/index.html
@@ -1062,7 +1062,7 @@
 </section>
 
 <footer class="footer">
-    <div th:insert="~{admin/footer_website :: footer_website}"></div>
+    <div th:insert="~{website/footer_website :: footer_website}"></div>
 </footer>
 
 <script src="js/jquery-1.11.0.min.js"></script>
